<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/InputDialog_rootLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">



    <EditText
        android:id="@+id/inputDialog_EditText"
        android:hint="@string/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></EditText>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/inputDialog_Confirm_Btn"
            android:text="confirm"
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></Button>

        <Button
            android:id="@+id/inputDialog_Cancel_Btn"
            android:text="cancel"
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></Button>

    </LinearLayout>




</LinearLayout>