<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/MainActivity_btn"
        android:layout_width="wrap_content"
        android:onClick="showDialog"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:text="Show Dialog">
    </Button>


    <TextView
        android:id="@+id/MainActivity_tv"
        android:layout_below="@+id/MainActivity_btn"
        android:layout_centerHorizontal="true"
        android:text="Name"
        android:textSize="30dp"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </TextView>


</RelativeLayout>